fix hero on small screem

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
 
 * {
   margin: 0;
@@ -14,6 +11,7 @@ body {
   font-family: Ubunut, sans-serif;
   background: #fafafa;
   color: #616161;
+  min-width: 360px;
 }
 
 ul {
